explanation: index.html- and index.js- connection

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,26 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <title>Rick and Morty</title>
   </head>
   <body>
+    <h1>Rick and Morty</h1>
+    <hr />
+    <h4>React- App- Project</h4>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
+
+<!-- 2.>>> (you find 1.>>> in index.js) This folder is a folder in which we will rarely work but it holds one
+important file.This index.html file.This is the single HTML file,which is in the
+end loaded by the browser here.This is basically the only HTML file that is
+being used by this overall React application because it's a so-called single
+page application.It has a single HTML file -->
+<!-- The div with the id root in this case.That's a regular div,which actually
+doesn't hold any content,but that's the div where we want to attach or inject
+our React-driven user interface. -->
+<!-- So it's this div where the React-based user interface should be rendered into
+and therefore, in index.js,it's this div with the id root (=> in index.js: const root = ReactDOM.createRoot(document.getElementById("root"));
+root.render() )-->
+<!-- so what's inside of this div (root)should be replaced in index.js with that:(<App/>) -->
