comment:connection to App.js from index or another file

--- a/public/index.html
+++ b/public/index.html
@@ -33,3 +33,4 @@ our React-driven user interface. -->
 and therefore, in index.js,it's this div with the id root (=> in index.js: const root = ReactDOM.createRoot(document.getElementById("root"));
 root.render() )-->
 <!-- so what's inside of this div (root)should be replaced in index.js with that:(<App/>) -->
+<!-- => go to app.js for more info -->
